[metadata]
name = yakumo
summary = Yet Another Unified OpenStack Client Library
description-file =
    README.md
author = Akira Yoshiyama
author-email = akirayoshiyama@gmail.com
home-page = https://github.com/yosshy/yakumo
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    yakumo

[entry_points]
console_scripts =
    ossh = yakumo.cmd.ossh:main

[wheel]
universal = 1
